# Ethos-AI-Brain

./: .gitignore  README.md  demo_cognitive_capabilities.py  demo_web_scraper.py  pyproject.toml  start_flask.py  start_mcp.py  stop_all_servers.py  stop_flask.py  stop_mcp.py  test_ai_engine_integration.py
docs/brainstorms/: 2025-10-26 knowledge-nebula-concept.md  2025-10-27 agent-zero-vision.md  2025-10-27 unified-mcp-architecture.md
docs/source/: conf.py  index.rst
docs/sprints/: SPRINT_01_KNOWLEDGE.md  SPRINT_02_KNOWLEDGE_NEBULA.md  SPRINT_03_UNIFIED_MCP.md
ethos_ai_brain.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ethos_ai_brain/core/ai_agent/: __init__.py  ai_agent.py  ai_agent_orchestrator.py  ai_brain.py  ai_engine.py
ethos_ai_brain/core/prompt_manager/: __init__.py  prompt_manager.py
ethos_ai_brain/core/prompt_manager/.tests/: prompt_manager_tests.py
ethos_ai_brain/core/prompt_routing_manager/: __init__.py  prompt_routing_manager.py  prompt_routing_manager_OLD.py
ethos_ai_brain/core/prompt_routing_manager/.tests/: prompt_routing_tests.py
ethos_ai_brain/core/prompt_templates/: general_analysis.jinja
ethos_ai_brain/core/schema_manager/: __init__.py  schema_manager.py
ethos_ai_brain/core/schemas/: __init__.py  model_metadata.py  prompt_intent.py
ethos_ai_brain/core/zeromq/: zmq_command_bridge.py  zmq_node_base.py
ethos_ai_brain/knowledge/: __init__.py
ethos_ai_brain/knowledge/.archive/: knowledge_graph_manager_old.py  knowledge_graph_visualizer_old.py
ethos_ai_brain/knowledge/common/: knowledge_graph.py  knowledge_system.py  layered_knowledge_graph.py
ethos_ai_brain/knowledge/common/style/: knowledge_graph_style.py
ethos_ai_brain/knowledge/common/visualizers/: __init__.py  ascii_visualizer.py  knowledge_graph_visualizer_base.py  layered_knowledge_graph_visualizer.py  matplotlib_visualizer.py
ethos_ai_brain/orchestration/agent_patterns/: orchestration_base.py  orchestration_patterns.py  orchestration_reqrep.py
ethos_ai_brain/orchestration/mcp/: __init__.py  cli.py
ethos_ai_brain/orchestration/mcp/.archive/: mcp_server_manager.py  test_cli_integration.py
ethos_ai_brain/orchestration/mcp/client/: __init__.py  mcp_client_base.py  mcp_client_direct.py  mcp_client_factory.py  mcp_client_json_rpc.py  mcp_client_router.py
ethos_ai_brain/orchestration/mcp/client-server/: client.py  server.py
ethos_ai_brain/orchestration/mcp/config/: namespaces.yaml
ethos_ai_brain/orchestration/mcp/flask_integration/: __init__.py  dynamic_endpoints.py
ethos_ai_brain/orchestration/mcp/server/: __init__.py  mcp_server_base.py  mcp_server_direct.py  mcp_server_factory.py  mcp_server_json_rpc.py  mcp_server_router.py
ethos_ai_brain/orchestration/mcp/tool_management/: __init__.py  mcp_tool_manager.py  namespace_registry.py  tool_wrappers.py  validate_tools.py
ethos_ai_brain/orchestration/mcp/tools/: TOOLS_DOCUMENTATION.md  __init__.py  namespace_registry.py  uv_first_discovery.py  validate_tools.py
ethos_ai_brain/orchestration/mcp/web_integration/: __init__.py  flask_blueprint.py
ethos_ai_brain/orchestration/mcp_tools/: __init__.py
ethos_ai_brain/orchestration/mcp_tools/.archive/infer_relationships_A__TO_BE_ARCHIVED/: pyproject.toml  tool.py
ethos_ai_brain/orchestration/mcp_tools/.archive/infer_relationships_B_TO_BE_ARCHIVED/: pyproject.toml  tool.py
ethos_ai_brain/orchestration/mcp_tools/utilities/system/system_tools/: __init__.py  pyproject.toml  tool.py
ethos_ai_brain/orchestration/mcp_tools/utilities/web/web_scraper/: __init__.py  pyproject.toml  tool.py
ethos_ai_brain/reasoning/inference_engines/: __init__.py  embeddings_engine.py  inference_engine_base.py  llm_engine.py  vision_engine.py
ethos_ai_brain/reasoning/inference_engines_manager/: __init__.py  inference_engines_manager.py
ethos_ai_brain/reasoning/inference_model_manager/: __init__.py  inference_model_enricher.py  inference_model_manager.py  inference_model_selector.py  model_schemas.py
ethos_ai_brain/reasoning/inference_model_manager/.demos/: demo_model_manager.py
ethos_ai_brain/reasoning/inference_model_manager/.tests/: model_manager_tests.py  multi-model_test.py
ethos_ai_brain/reasoning/inference_model_manager/metadata/: curated_llm_models.py  (+1 more)
ethos_ai_brain/reasoning/intent_analysis/: __init__.py  adaptive_intent_analyzer.py
ethos_ai_brain/reasoning/meta_reasoning/: __init__.py  reasoning_manager.py
ethos_ai_brain_tests/core/ai_agent/: test_ai_engine_mcp.py
ethos_ai_brain_tests/knowledge/must_pass/: test_knowledge_system.py  test_knowledge_system_integration.py
ethos_ai_brain_tests/orchestration/mcp/: test_cli_async.py
legacy_code/ai_command/: __init__.py  adaptive_intent_runner.py  agent_orchestration_base.py  agent_orchestration_reqrep.py  agent_orchestration_reqrep_demo.py  ai_agent.py  ai_agent_manager.py  ai_brain.py  ai_brain_old.py  ai_engine.py  ai_engine_demo.py  command_structures.py  conversation_interface.py  dag_models.py  demo_clean_conversation.py  demo_conversation_flow.py  execution_knowledge_graph.py  execution_knowledge_graph_demo.py  intake_planner.py  intent_knowledge_graph.py  intent_knowledge_graph_demo.py  intent_knowledge_graph_json_demo.py  intent_knowledge_graph_zmq.py  intent_knowledge_graph_zmq_demo.py  intent_knowledge_graph_zmq_llm_schema_demo.py  intent_llm_live_demo.py  intent_llm_runner.py  intent_llm_runner_demo.py  knowledge_graph.py  knowledge_graph_brain.py  knowledge_graph_demo.py  knowledge_graph_style.py  knowledge_graph_visualizer.py  major_general.py  meta_reasoning_base.py  meta_reasoning_base_demo.py  meta_reasoning_base_new.py  meta_reasoning_engine.py  meta_reasoning_intent.py  meta_reasoning_intent_demo.py  (+17 more)
legacy_code/ai_command/.archive/: adaptive_intent_demo.py  ai_agent_old.py  ai_ecosystem_not_used.py  debug_mission.py  debug_networkx.py  debug_wedding.py  intent_demo_clean.py  knowledge_graph_backup.py  mission_demo_simple.py  test_mission_simple.py
legacy_code/tests/ai_command/: run_must_pass_tests.py  simple_test.py  simple_zmq_test.py  test_ai_command.py
(+90 files in other folders)
